--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "homepage": "https://github.com/IceSuchanyaR/Resume-Suchanya.git",
   "name": "ecommerce",
   "version": "1.1.0",
   "private": true,
+  "homepage": "https://github.com/IceSuchanyaR/Resume-Suchanya.git",
   "dependencies": {
     "@rematch/core": "^1.1.0",
     "@rematch/persist": "^1.1.6",
@@ -20,12 +20,12 @@
     "styled-components": "^4.2.0"
   },
   "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    // "start": "react-scripts start",
-    // "build": "react-scripts build",
-    // "test": "react-scripts test",
-    // "eject": "react-scripts eject"
+    "deploy": "gh-pages -d build"
   },
   
   "eslintConfig": {
